--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - uses: testspace-com/setup-testspace@v1
       with:
@@ -50,7 +50,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest test
+        pytest test --junit-xml=junit-report.xml
 
     - name: Push Pytest results to Testspace server
       run: |
