--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,8 @@ on:
   pull_request:
     branches:
       - 'release/**'
+  tags:
+    - staging-*
   schedule:
     # * is a special character in YAML so you have to quote this string
     # https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows#scheduled-events
