--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches:
       - 'release/**'
+
+    tags:
+      - 'staging-**'
+
   pull_request:
     branches:
       - 'release/**'
