--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ on:
 
 jobs:
 
-  test-all:
+  ci-test-staging:
 
     runs-on: ubuntu-latest
 
@@ -65,10 +65,16 @@ jobs:
     - name: Echo variables
       run: |
         echo "github.event.inputs.result_name '${{ github.event.inputs.result_name }}'"
-        echo "env.GITHUB_REF_NAME '${{ github.ref_name }}}'"
+        echo "env.GITHUB_REF_NAME '${{ github.ref_name }}'"
 
-    - name: Push Pytest results to Testspace server
+    - name: [Manual] Pushing Pytest results for {{ github.actor }} to Testspace server
       run: |
-          testspace "junit-*.xml" "ci-demo/staging#${{ github.actor }}"
+          testspace "junit-*.xml" "ci-demo/staging#M${{ github.run_number }}:${{ github.actor }}-${{ github.event.inputs.result_name }}-${{ github.ref_name }}"
       working-directory: ${{env.working-directory}}
-      if: always()
+      if: always() && ${{ github.event.inputs.result_name }} != ''
+
+    - name: [Auto] Push Pytest results to Testspace server
+      run: |
+          testspace "junit-*.xml" "ci-demo/staging#A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}"
+      working-directory: ${{env.working-directory}}
+      if: always() && ${{ github.event.inputs.result_name }} == ''
