pushing my luck 3

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,10 +72,10 @@ jobs:
       run: |
           testspace "junit-*.xml" "ci-demo/staging#M${{ github.run_number }}:${{ github.actor }}-${{ github.event.inputs.result_name }}-${{ github.ref_name }}"
       working-directory: ${{env.working-directory}}
-      if: always() && ${{ github.event.inputs.result_name }} != ''
+      if: ${{ github.event.inputs.result_name }} != '' && always()
 
     - name: AUTO Push Pytest results to Testspace server
       run: |
           testspace "junit-*.xml" "ci-demo/staging#A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}"
       working-directory: ${{env.working-directory}}
-      if: always() && ${{ github.event.inputs.result_name }} == ''
+      if: ${{ github.event.inputs.result_name }} == '' && always()
