--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,8 @@ on:
       result_name:
         description: Name of the result as you would like it to appear on testspace
         required: true
-
 env:
-  TEST_SPACE_RESULT_NAME: A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}
+  BUILD_SLUG: A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}
 
 jobs:
 
@@ -36,12 +35,20 @@ jobs:
 
     steps:
 
+    - name: Create TestSpace Result Name
+      run: |
+        TEST_SPACE_RESULT_NAME="${BUILD_SLUG////-}"
+        echo $TEST_SPACE_RESULT_NAME
+        echo "::set-env name=TEST_SPACE_RESULT_NAME::$TEST_SPACE_RESULT_NAME"
+
     - uses: actions/checkout@v3
 
     - uses: testspace-com/setup-testspace@v1
       with:
         domain: ${{ github.repository_owner }}
         token: ${{ secrets.TESTSPACE_TOKEN }}
+
+
 
     - name: Install build essentials
       run: |
