--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,11 @@ on:
         required: true
 env:
   BUILD_SLUG: A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+  # The `set-env` command is disabled. Please upgrade to using Environment Files or
+  # opt into unsecure command execution by setting the `ACTIONS_ALLOW_UNSECURE_COMMANDS`
+  # environment variable to `true`. For more information
+  # see: https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/
 
 jobs:
 
@@ -36,6 +41,7 @@ jobs:
     steps:
 
     - name: Create TestSpace Result Name
+      # We need to do this since test space interprets a / as a folder
       run: |
         TEST_SPACE_RESULT_NAME="${BUILD_SLUG////-}"
         echo $TEST_SPACE_RESULT_NAME
@@ -86,6 +92,6 @@ jobs:
 
     - name: AUTO Push Pytest results to Testspace server
       run: |
-          testspace "junit-*.xml" "ci-demo/staging#${{ env.TEST_SPACE_RESULT_NAME}}"
+          testspace "junit-*.xml" "ci-demo/staging#$TEST_SPACE_RESULT_NAME"
       working-directory: ${{env.working-directory}}
       if: always()
