--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
       # If the result_name is not set it is an Automatically triggered run (prefix M)
       # otherwise it is manual (prefix M)
       run: |
-        if [ -z "${{ github.event.inputs.result_name }}" ]; then
+        if [ -z '${{ github.event.inputs.result_name }}' ]; then
           BUILD_SLUG=A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}
         else
           BUILD_SLUG=M${{ github.run_number }}:${{ github.actor }}-${{ github.event.inputs.result_name }}-${{ github.ref_name }}
