--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,13 +2,13 @@
 # This workflow is kicked off when a push, pull request even is received
 # Or a tag is created.
 #
-# It can also be manually triggered by the user in which case, the result_name
+# It can also be manually triggered by the user in which case, the result_slug
 # is added
 # The testspace results have the following form:
 #
 #   A<workflow ID>:<author>-<branch or tag>
 #   e.g. A25:lbrack-release-1.x
-#   M<workflow ID>:<author>-<result_name>-<branch or tag>
+#   M<workflow ID>:<author>-<result_slug>-<branch or tag>
 #   e.g. M26:lbrack-hello world-release-1.x
 
 name: Staging Release
@@ -31,16 +31,10 @@ on:
     - cron:  '0 5 * * *'
   workflow_dispatch:
     inputs:
-      result_name:
-        description: Name of the result as you would like it to appear on testspace
-        required: true
+      result_slug:
+        description: A token used as a mnemonic for that run
+        required: true        
 
-env:
-  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-  # The `set-env` command is disabled. Please upgrade to using Environment Files or
-  # opt into unsecure command execution by setting the `ACTIONS_ALLOW_UNSECURE_COMMANDS`
-  # environment variable to `true`. For more information
-  # see: https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/
 
 jobs:
 
@@ -50,20 +44,8 @@ jobs:
 
     steps:
 
-    - name: Create TestSpace Result Name
-      # We need to do this since test space interprets a / as a folder
-      # If the result_name is not set it is an Automatically triggered run (prefix M)
-      # otherwise it is manual (prefix M)
-      run: |
-        if [ -z '${{ github.event.inputs.result_name }}' ]; then
-          BUILD_SLUG=A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}
-        else
-          BUILD_SLUG=M${{ github.run_number }}:${{ github.actor }}-${{ github.event.inputs.result_name }}-${{ github.ref_name }}
-        fi
-        TEST_SPACE_RESULT_NAME="${BUILD_SLUG////-}"
-        echo "::set-env name=TEST_SPACE_RESULT_NAME::'$TEST_SPACE_RESULT_NAME'"
-        echo BUILD_SLUG=$BUILD_SLUG
-        echo TEST_SPACE_RESULT_NAME=$TEST_SPACE_RESULT_NAME
+    - name: Dump context
+      uses: crazy-max/ghaction-dump-context@v1
 
     - uses: actions/checkout@v3
 
@@ -96,6 +78,13 @@ jobs:
 
     - name: Push Pytest results to Testspace server
       run: |
-          testspace "junit-*.xml" "ci-demo/staging#$TEST_SPACE_RESULT_NAME"
+          if [ -z '${{ github.event.inputs.result_slug }}' ]; then
+            BUILD_SLUG=A${{ github.run_number }}:${{ github.actor }}-${{ github.ref_name }}
+          else
+            BUILD_SLUG=M${{ github.run_number }}:${{ github.actor }}-${{ github.event.inputs.result_slug }}-${{ github.ref_name }}
+          fi
+          export TEST_SPACE_RESULT_NAME="${BUILD_SLUG////-}"
+          echo ">>>" testspace "junit-*.xml" ci-demo/staging#$TEST_SPACE_RESULT_NAME
+          testspace "junit-*.xml" ci-demo/staging#$TEST_SPACE_RESULT_NAME
       working-directory: ${{env.working-directory}}
       if: always()
