--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,8 @@ jobs:
       uses: crazy-max/ghaction-dump-context@v1
 
     - uses: actions/checkout@v3
+      ref: ${{ github.env.ref_name }}
+
 
     - uses: testspace-com/setup-testspace@v1
       with:
