--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest test --junit-xml=junit-report.xml
+        pytest test -s --junit-xml=junit-report.xml
 
     - name: Push Pytest results to Testspace server
       run: |
